--- a/tdc_1.html
+++ b/tdc_1.html
@@ -55,9 +55,6 @@
               <div class="grid" style="display:none;">
                 <div class="i-row clearfix">
                   <div class="i-col width-1-5">
-                    <a href="images/tdc1/i1.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i1.jpg"> </a>
-                  </div>
-                  <div class="i-col width-1-5">
                     <a href="images/tdc1/i2.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i2.jpg"> </a>
                   </div>
                   <div class="i-col width-1-5">
@@ -69,10 +66,32 @@
                   <div class="i-col width-1-5">
                     <a href="images/tdc1/i5.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i5.jpg"> </a>
                   </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i6.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i6.jpg"> </a>
+                  </div>
                 </div>
-                <div>
-                  <a href="images/tdc1/i6.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i6.jpg"> </a>
+                <div style="height: 55%; padding:0 0 12px 8px">
+                  <a href="images/tdc1/i1.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i1.jpg"> </a>
                 </div>
+
+                <div class="i-row clearfix">
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i9.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i9.jpg"> </a>
+                  </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i11.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i11.jpg"> </a>
+                  </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i10.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i10.jpg"> </a>
+                  </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i7.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i7.jpg"> </a>
+                  </div>
+                  <div class="i-col width-1-5">
+                    <a href="images/tdc1/i8.jpg" data-lightbox="lightbox" > <img  src="images/tdc1/i8.jpg"> </a>
+                  </div>
+                </div>
+
               </div>
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
