--- a/1_1_jiandang4.html
+++ b/1_1_jiandang4.html
@@ -47,63 +47,75 @@
             <div class="titlepart">
             </div>
             <div id="image_list" class=" bodypart">
-              <ul class="jiandanglist">
-                <li><img src="./images/jiandang/jianlist2_03.png"></li>
-                <li><img src="./images/jiandang/jianlist2_05.png"></li>
-                <li><img src="./images/jiandang/jianlist2_07.png"></li>
-                <li><img src="./images/jiandang/jianlist2_09.png"></li>
+              <ul class="jiandanglist grid" style="display:none;">
+                <li><a href="images/jiandang4/i1.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_03.png"> </a> </li>
+                <li><a href="images/jiandang4/i2.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_05.png"> </a> </li>
+                <li><a href="images/jiandang4/i5.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_07.png"> </a> </li>
+                <li><a href="images/jiandang4/i6.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_09.png"> </a> </li>
 
-                <li><img src="./images/jiandang/jianlist2_15.png"></li>
-                <li><img src="./images/jiandang/jianlist2_16.png"></li>
-                <li><img src="./images/jiandang/jianlist2_17.png"></li>
-                <li><img src="./images/jiandang/jianlist2_18.png"></li>
+                <li><a href="images/jiandang4/i3.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_15.png"> </a> </li>
+                <li><a href="images/jiandang4/i7.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_16.png"> </a> </li>
+                <li><a href="images/jiandang4/i4.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_17.png"> </a> </li>
+                <li><a href="images/jiandang4/i8.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_18.png"> </a> </li>
 
-                <li><img src="./images/jiandang/jianlist2_23.png"></li>
-                <li><img src="./images/jiandang/jianlist2_24.png"></li>
+                <li><a href="images/jiandang4/i9.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_23.png"> </a> </li>
+                <li><a href="images/jiandang4/i10.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist2_24.png"> </a> </li>
 
               </ul>
+              <div class="swiper swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">	<img src="images/jiandang4/i1.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i2.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i3.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i5.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i6.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i7.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang4/i8.jpg">	</div>
+                </div>
               </div>
-
             </div>
 
           </div>
 
         </div>
+
       </div>
     </div>
-    <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+  </div>
+  <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
+    <div class="content">
+      <div class="col-md-3 leftpart">
+        <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
+          <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+          <span>		视频 </span>
+        </a>
+      </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/party/3组织建设.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+      <div class="col-md-9 rightpart" >
+        <div class="pull-right">
+          <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
+          <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
+          <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+          <audio id="audio-js"  class="audio-js">
+            <source src="audios/party/3组织建设.ogg" type="audio/ogg" />
+          </audio>
         </div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Modal -->
+  <!-- Modal -->
 
-  </div>
-  <script src="scripts/jquery-1.9.1.min.js"></script>
-  <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-  <script src="scripts/swiper.jquery.min.js"></script>
-  <script src="scripts/swiper.animate.min.js"></script>
-  <script src="scripts/video.js"></script>
-  <script src="scripts/lightbox.min.js"></script>
-  <script src="scripts/typing-animate.js"></script>
-  <script src="scripts/app.js"></script>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
 </body>
 </html>
