--- a/tss_4.html
+++ b/tss_4.html
@@ -49,60 +49,54 @@
                     </div>
                     <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none;">
-                            <div class="col2-60b-left" style=""> <!--左边60%-->
-                                <div class="lin2-25b-top"> <!--左边上25%-->
-                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
-                                        <a href="images/tss4/i2.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss4/i2.jpg" class=""
-                                                style="width:100%; height:117px;"></a>
-                                    </div>
-                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
-                                        <a href="images/tss4/i2.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss4/i2.jpg" class=""
-                                                style="width:100%; height: 117px;"></a>
-                                    </div>
-                                    <div class="" style=" width: 33.33%; height: 100%; float: left; overflow: hidden;">
-                                        <!--左上3列-->
-                                        <a href="images/tss4/i2.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss4/i2.jpg" class=""
-                                                style="width:100%; height: 117px; float: right;"></a>
-                                    </div>
-                                </div>
-                                <div class="lin2-75b-foot"> <!--左边下75%-->
-                                    <a href="images/tss4/i1_s.png" data-lightbox="lightbox"><img
-                                            src="./images/tss4/i1.jpg" class=""
-                                            style="width:100%; height: 350px; "></a>
-                                </div>
+                          <div class="col-1-4-top">
+                            <div class="width-1-5 i-col"> <!--上5列-->
+                                <a href="images/tss4/i4.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss4/i4.jpg" class="img-fullh"
+                                        style=""></a>
                             </div>
+                            <div class="width-1-5 i-col"> <!--上5列-->
+                                <a href="images/tss4/i3.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss4/i2.jpg" class="img-fullh"
+                                        style=""></a>
+                            </div>
+                            <div class="width-1-5 i-col" style=" "><!--上5列-->
+                                <!--左上3列-->
+                                <a href="images/tss4/i6.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss4/i6.jpg" class="img-fullh"
+                                        style=" float: right;"></a>
+                            </div>
+                            <div class="width-1-5 i-col"><!--上5列-->
+                                <a href="images/tss4/i2.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss4/i2.jpg" class="img-fullh"
+                                        style=" "></a>
+                            </div>
+                            <div class="width-1-5 i-col"><!--上5列-->
+                                <a href="images/tss4/i7.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss4/i7.jpg" class="img-fullh"
+                                        style=" "></a>
+                            </div>
+                          </div>
+                          <div class="col-3-4-bottom">
+                            <div class="width-3-5 i-col"> <!--左边下60%-->
+                                <a href="images/tss4/i1.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tss4/i1.jpg" class="img-fullh"
+                                        style=""></a>
+                            </div>
+                            <div class="width-2-5 i-col"> <!--右边下40%-->
 
-                            <div class="col2-40b-right" style=""> <!--右边40%-->
-                                <div class="col2-40b-right-1lin">  <!--右第一行-->
-                                    <div style="float: left;width: 50%;">
-                                        <a href="images/tss4/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss4/i3.jpg" class=""
-                                                style=" height: 117px;padding: 0 5px 0 0; "></a>
-                                    </div>
-                                    <div style="float: left;width: 50%;">
-                                        <a href="images/tss4/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss4/i3.jpg" class=""
-                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
-                                    </div>
-                                </div>
-                                <div class="col2-40b-right-2lin">  <!--右第二行-->
-                                    <div style="float: left;width: 100%;">
-                                        <a href="images/tss4/i3.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss4/i3.jpg" class=""
-                                                style=""></a>
-                                    </div>
-                                </div>
-                                <div class="col2-40b-right-1lin">  <!--右第3行-->
-                                    <div style="float: left;width: 100%;">
-                                        <a href="images/tss4/i2.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss4/i2.jpg" class=""
-                                                style=""></a>
-                                    </div>
-                                </div>
+                              <div class="col-1-2-top">
+                                  <a href="images/tss4/i8.jpg" data-lightbox="lightbox"><img
+                                          src="./images/tss4/i8.jpg" class=""
+                                          style=""></a>
+                              </div>
+                              <div class="col-1-2-bottom">
+                                  <a href="images/tss4/i5.jpg" data-lightbox="lightbox"><img
+                                          src="./images/tss4/i5.jpg" class=""
+                                          style=""></a>
+                              </div>
                             </div>
+                          </div>
                         </div>
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
@@ -141,7 +135,7 @@
                     <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
                             class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
                     <audio id="audio-js"  class="audio-js">
-                        
+
                     </audio>
                 </div>
             </div>
