--- a/tss_5.html
+++ b/tss_5.html
@@ -56,34 +56,34 @@
 
                 <div class="col-8max-right" style="">
 
-                  <div class="col-lin1-8max-right" style="">
-                      <a href="images/tss5/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i2.jpg" class="" style="width: 100%;  height: 100%"></a>
+                  <div class="height-1-4" style="">
+                      <a href="images/tss5/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i7.jpg" class="" style="width: 100%;  height: 100%"></a>
                   </div>
 
-                  <div class="col-lin2-8max-right" style="width:100%; height:25%; float:left; padding:0 0 10px 0; overflow: hidden;">
-                    <div style="width:50%; height:100%; float: left">
-                      <a href="images/tss5/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i3.jpg" class="" style="width: 100%;  height: 100%; padding:0 5px 0 0;"></a>
+                  <div class="height-1-4" style="padding: 10px 0 0 0;">
+                    <div class="row-1-2-left">
+                      <a href="images/tss5/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i3.jpg" class="img-fullh" style=" padding:0 5px 0 0;"></a>
                     </div>
-                    <div style="width:50%; height:100%; float: right">
-                      <a href="images/tss5/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i9.jpg" class="" style="width: 100%;  height: 100%; padding:0 0 0 5px;"></a>
-                    </div>
-                  </div>
-
-                  <div class="col-lin3-8max-right" style="width:100%; height:25%; float:left; padding:0 0 10px 0; overflow: hidden;">
-                    <div style="width:50%; height:100%; float: left">
-                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 5px 0 0;"></a>
-                    </div>
-                    <div style="width:50%; height:100%; float: right">
-                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 0 0 5px;"></a>
+                    <div class="row-1-2-left">
+                      <a href="images/tss5/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i9.jpg" class="img-fullh" style=" padding:0 0 0 5px;"></a>
                     </div>
                   </div>
 
-                  <div class="col-lin4-8max-right" style="width:100%; height:25%; float:left; overflow: hidden;">
-                    <div style="width:50%; height:100%; float: left">
-                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 5px 0 0;"></a>
+                  <div class="height-1-4" style="padding: 10px 0 0 0;">
+                    <div class="row-1-2-left">
+                      <a href="images/tss5/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i2.jpg" class="img-fullh" style=" padding:0 5px 0 0;"></a>
                     </div>
-                    <div style="width:50%; height:100%; float: right">
-                      <a href="images/tss5/i2_s.png" data-lightbox="lightbox" ><img src="./images/tss5/i2_s.png" class="" style="width: 100%;  height: 100%; padding:0 0 0 5px;"></a>
+                    <div class="row-1-2-left">
+                      <a href="images/tss5/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i6.jpg" class="img-fullh" style=" padding:0 0 0 5px;"></a>
+                    </div>
+                  </div>
+
+                  <div class="height-1-4" style="padding: 10px 0 0 0;">
+                    <div class="row-1-2-left">
+                      <a href="images/tss5/i8.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i8.jpg" class="img-fullh" style=" padding:0 5px 0 0;"></a>
+                    </div>
+                    <div class="row-1-2-left">
+                      <a href="images/tss5/i7.jpg" data-lightbox="lightbox" ><img src="./images/tss5/i7.jpg" class="img-fullh" style=" padding:0 0 0 5px;"></a>
                     </div>
                   </div>
 
