--- a/tss_8.html
+++ b/tss_8.html
@@ -46,72 +46,72 @@
                     </div>
                     <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none;">
-                            <div class="col2-60b-left" style=""> <!--左边60%-->
-                                <div class="lin2-25b-top"> <!--左边上25%-->
-                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
+                            <div class="width-3-5" style=""> <!--左边60%-->
+                                <div class="height-1-4"> <!--左边上25%-->
+                                    <div class="width-1-3" style="padding: 0 16px 16px 0;"> <!--左上3列-->
                                         <a href="images/tss8/i10.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i10.jpg" class=""
-                                                style="width:100%; height:117px;"></a>
+                                                src="./images/tss8/i10.jpg" class="img-fullh"
+                                                style=""></a>
                                     </div>
-                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
+                                    <div class="width-1-3" style="padding: 0 16px 16px 0;"> <!--左上3列-->
                                         <a href="images/tss8/i7.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i7.jpg" class=""
-                                                style="width:100%; height: 117px;"></a>
+                                                src="./images/tss8/i7.jpg" class="img-fullh"
+                                                style=""></a>
                                     </div>
-                                    <div class="" style=" width: 33.33%; height: 100%; float: left; overflow: hidden;">
+                                    <div class="width-1-3" style="padding: 0 16px 16px 0;">
                                         <a href="images/tss8/i6.jpg" data-lightbox="lightbox"><img
-                                                src="./images/tss8/i6.jpg" class=""
-                                                style="width:100%; height: 117px; float: right;"></a>
+                                                src="./images/tss8/i6.jpg" class="img-fullh"
+                                                style=" "></a>
                                     </div>
                                 </div>
-                                <div class="lin2-75b-foot"> <!--左边下75%-->
+                                <div class="height-3-4"  style="padding: 0 16px 0 0;"> <!--左边下75%-->
                                     <a href="images/tss8/img7_03.png" data-lightbox="lightbox"><img
-                                            src="./images/tss8/img7_03.png" class=""
-                                            style="width:100%; height: 350px; "></a>
+                                            src="./images/tss8/img7_03.png" class="img-fullh"
+                                            style=" "></a>
                                 </div>
                             </div>
 
-                            <div class="col2-40b-right" style=""> <!--右边40%-->
-                                <div class="col2-40b-right-1lin">  <!--右第一行-->
-                                    <div style="float: left;width: 50%;">
+                            <div class="width-2-5" style=""> <!--右边40%-->
+                                <div class="height-1-4">  <!--右第一行-->
+                                    <div class="row-1-2-left">
                                         <a href="images/tss8/i9.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss8/i9.jpg" class=""
-                                                style=" height: 117px;padding: 0 5px 0 0; "></a>
+                                                style="  "></a>
                                     </div>
-                                    <div style="float: left;width: 50%;">
+                                    <div class="row-1-2-right">
                                         <a href="images/tss8/i4.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss8/i4.jpg" class=""
-                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
+                                                style=" "></a>
                                     </div>
                                 </div>
-                                <div class="col2-40b-right-1lin">  <!--右第一行-->
-                                    <div style="float: left;width: 50%;">
+                                <div class="height-1-4">  <!--右第一行-->
+                                    <div class="row-1-2-left">
                                         <a href="images/tss8/i5.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss8/i5.jpg" class=""
-                                                style=" height: 117px;padding: 0 5px 0 0;"></a>
+                                                style=" "></a>
                                     </div>
-                                    <div style="float: left;width: 50%;">
+                                    <div class="row-1-2-right">
                                         <a href="images/tss8/i8.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss8/i8.jpg" class=""
-                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
+                                                style=" "></a>
                                     </div>
                                 </div>
-                                <div class="col2-40b-right-1lin">  <!--右第一行-->
-                                    <div style="float: left;width: 50%;">
+                                <div class="height-1-4">  <!--右第一行-->
+                                    <div class="row-1-2-left">
                                         <a href="images/tss8/i3.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss8/i3.jpg" class=""
-                                                style="height: 117px;padding: 0 5px 0 0;"></a>
+                                                style=""></a>
                                     </div>
-                                    <div style="float: left;width: 50%;">
+                                    <div class="row-1-2-right">
                                         <a href="images/tss8/i2.jpg" data-lightbox="lightbox"><img
                                                 src="./images/tss8/i2.jpg" class=""
-                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
+                                                style=" "></a>
                                     </div>
                                 </div>
-                                <div style="width: 100%">  <!--右第一行-->
+                                <div  class="height-1-4">  <!--右第一行-->
                                     <a href="images/tss8/i1.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tss8/i1.jpg" class=""
-                                            style=" height: 96px;"></a>
+                                            src="./images/tss8/i1.jpg" class="img-fullw"
+                                            style=""></a>
                                 </div>
 
                             </div>
@@ -157,7 +157,7 @@
                     <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
                             class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
                     <audio id="audio-js"  class="audio-js">
-                        
+
                     </audio>
                 </div>
             </div>
