--- a/tss_2.html
+++ b/tss_2.html
@@ -47,12 +47,28 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none;">
-                <a href="images/tss2/spimg_03.png" data-lightbox="lightbox" > <img src="./images/tss2/spimg_03.png" class="zimg1"></a>
-                <div class="zimg2">
-                  <a href="images/tss2/spimg_05.png" data-lightbox="lightbox" ><img src="./images/tss2/spimg_05.png"></a>
-                  <div style="margin-top: 4.5%;">
-                    <a href="images/tss2/spimg_08.png" data-lightbox="lightbox" ><img src="./images/tss2/spimg_08.png" class="zimg3"></a>
-                    <a href="images/tss2/spimg_10.png" data-lightbox="lightbox" ><img src="./images/tss2/spimg_10.png" class="zimg4"></a>
+                <div class="width-3-5">
+                  <div class="height-1-4">
+                    <div class="width-1-3" style="padding: 0 16px 0 0;">
+                      <a href="images/tss2/i1.jpg" data-lightbox="lightbox" > <img src="./images/tss2/i1.jpg" class="img-fullh"></a>
+                    </div>
+                    <div class="width-1-3" style="padding: 0 16px 0 0;">
+                      <a href="images/tss2/i2.jpg" data-lightbox="lightbox" > <img src="./images/tss2/i2.jpg" class="img-fullh"></a>
+                    </div>
+                    <div class="width-1-3" style="padding: 0 16px 0 0;">
+                      <a href="images/tss2/i3.jpg" data-lightbox="lightbox" > <img src="./images/tss2/i3.jpg" class="img-fullh"></a>
+                    </div>
+                  </div>
+                  <div class="height-3-4" style="padding: 16px 16px 0 0;">
+                    <a href="images/tss2/i4.jpg" data-lightbox="lightbox" ><img src="./images/tss2/spimg_05.png" class="img-fullh"></a>
+                  </div>
+                </div>
+                <div class="width-2-5">
+                  <div class="height-1-2" style="padding: 0 0 8px 0;">
+                  <a href="images/tss2/i5.jpg" data-lightbox="lightbox" ><img src="./images/tss2/i5.jpg" class="img-fullh"></a>
+                  </div>
+                  <div class="height-1-2" style="padding: 8px 0 0 0;">
+                    <a href="images/tss2/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss2/i6.jpg" class="img-fullh"></a>
                   </div>
                 </div>
               </div>
